# gitnexus-rs

./: .env.example  .gitignore  AGENTS.md  AUDIT-REPORT.html  Audit_Methodologique_ASPNET_MVC5.docx  CLAUDE.md  CODEX_CHAT_PROMPT.md  COLAB.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  INSTALLATION.md  LICENSE  MODERNIZATION.md  REACT_SOURCE_GRAPH_NAVIGATION.md  README.fr.md  README.md  TODO-HTML.md  TODO.md  build-nexus-suite.bat  build-release.bat  build-release.sh  check-gitnexus.cmd  config-chatgpt.cmd  doctor-gitnexus.cmd  gitnexus.cmd  index.html  login-chatgpt.cmd  package-lock.json  package.json  result.md  start-chat-react.cmd  start-desktop.cmd  test-chatgpt.cmd
crates/gitnexus-cli/: Cargo.toml
crates/gitnexus-cli/src/: main.rs
crates/gitnexus-cli/src/auth/: codex_oauth.rs  mod.rs
crates/gitnexus-cli/src/commands/: analyze.rs  ask.rs  clean.rs  config_cmd.rs  context_cmd.rs  coupling_cmd.rs  coverage.rs  cypher_cmd.rs  dashboard.rs  diagram.rs  embed.rs  export_docx.rs  generate.rs  generate_aspnet.rs  hotspots.rs  impact_cmd.rs  list.rs  mcp.rs  mcp_install.rs  mod.rs  ownership_cmd.rs  query_cmd.rs  rag_import.rs  report.rs  serve.rs  setup.rs  shell.rs  status.rs  trace_doc.rs  trace_files.rs  trace_import.rs  validate_docs.rs  watch.rs
crates/gitnexus-cli/tests/: cli_integration.rs
crates/gitnexus-core/: Cargo.toml
crates/gitnexus-core/src/: error.rs  id.rs  lib.rs  process_doc.rs  secret_store.rs  trace.rs
crates/gitnexus-core/src/config/: languages.rs  mod.rs  project.rs
crates/gitnexus-core/src/graph/: knowledge_graph.rs  mod.rs  types.rs
crates/gitnexus-core/src/llm/: mod.rs  openai.rs
crates/gitnexus-core/src/memory/: mod.rs
crates/gitnexus-core/src/pipeline/: types.rs
crates/gitnexus-core/src/resolution/: context.rs  mod.rs  types.rs
crates/gitnexus-core/src/storage/: git.rs  mod.rs  repo_manager.rs
crates/gitnexus-core/src/symbol/: definition.rs  mod.rs  table.rs
crates/gitnexus-db/: Cargo.toml
crates/gitnexus-db/examples/: alise_smoke.rs
crates/gitnexus-db/src/: adapter.rs  csv_generator.rs  error.rs  lib.rs  pool.rs  query.rs  schema.rs  snapshot.rs
crates/gitnexus-db/src/analytics/: clones.rs  complexity.rs  cycles.rs  graph_diff.rs  mod.rs
crates/gitnexus-db/src/inmemory/: backend.rs  cypher.rs  fts.rs  mod.rs
crates/gitnexus-desktop/: Cargo.toml  UI_MOCKUP.jsx  UI_SPECS.md  tauri.conf.json
crates/gitnexus-desktop/src/: lib.rs  main.rs  state.rs  types.rs
crates/gitnexus-desktop/src/commands/: activity.rs  bookmarks.rs  chat.rs  chat_executor.rs  chat_planner.rs  code_review.rs  comments.rs  context.rs  coverage.rs  cypher.rs  dashboards.rs  diagram.rs  docs.rs  export.rs  feature_dev.rs  files.rs  git_analytics.rs  graph.rs  health.rs  html_export.rs  impact.rs  inventory.rs  mod.rs  notebooks.rs  process.rs  quality.rs  rename.rs  repos.rs  repos_overview.rs  saved_queries.rs  saved_views.rs  search.rs  shared.rs  simplify.rs  snapshots.rs  user_bundle.rs  user_commands.rs  wiki.rs  workflows.rs
crates/gitnexus-desktop/ui/: 14,  index.html  package-lock.json  package.json  playwright.config.ts  playwright.html-only.config.ts  vite.config.ts
crates/gitnexus-desktop/ui/e2e/: deepwiki.spec.ts  html-wiki.spec.ts  new-panels.spec.ts  smoke.spec.ts
crates/gitnexus-desktop/ui/scripts/: report-bundle.mjs  screenshot-audit.mjs
crates/gitnexus-desktop/ui/src/: App.tsx  index.css  main.tsx  react-cytoscapejs.d.ts
crates/gitnexus-git/: Cargo.toml
crates/gitnexus-git/src/: coupling.rs  hotspots.rs  lib.rs  ownership.rs  types.rs
crates/gitnexus-ingest/: Cargo.toml
crates/gitnexus-ingest/src/: ast_cache.rs  grammar.rs  incremental.rs  lib.rs  manifest.rs  pipeline.rs  type_env.rs
crates/gitnexus-ingest/src/phases/: api_surface.rs  architecture.rs  aspnet_mvc.rs  calls.rs  community.rs  config_inventory.rs  db_schema.rs  dead_code.rs  heritage.rs  imports.rs  llm_enrichment.rs  mod.rs  parsing.rs  process.rs  structure.rs  todos.rs
crates/gitnexus-ingest/src/utils/: mod.rs
crates/gitnexus-ingest/src/workers/: mod.rs
crates/gitnexus-lang/: Cargo.toml
crates/gitnexus-lang/data/components/: blazor_community.toml  devexpress.toml  infragistics.toml  kendo.toml  syncfusion.toml  telerik.toml
crates/gitnexus-lang/src/: call_routing.rs  component_detection.rs  entry_point_scoring.rs  export_detection.rs  framework_detection.rs  lib.rs  provider.rs  registry.rs
crates/gitnexus-lang/src/import_resolvers/: csharp.rs  go.rs  jvm.rs  mod.rs  php.rs  python.rs  razor.rs  ruby.rs  rust_lang.rs  standard.rs  swift.rs  types.rs  utils.rs
crates/gitnexus-lang/src/languages/: c.rs  cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  php.rs  python.rs  razor.rs  ruby.rs  rust_lang.rs  swift.rs  typescript.rs
crates/gitnexus-lang/src/named_bindings/: csharp.rs  java.rs  kotlin.rs  mod.rs  php.rs  python.rs  razor.rs  rust_lang.rs  types.rs  typescript.rs
crates/gitnexus-lang/src/queries/: c.rs  cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  php.rs  python.rs  razor.rs  ruby.rs  rust_lang.rs  swift.rs  typescript.rs
crates/gitnexus-lang/src/route_extractors/: csharp.rs  edmx.rs  mod.rs
crates/gitnexus-lang/src/type_extractors/: mod.rs  types.rs
crates/gitnexus-mcp/: Cargo.toml
crates/gitnexus-mcp/src/: error.rs  hints.rs  jsonrpc.rs  lib.rs  llm_config.rs  prompts.rs  resources.rs  server.rs
crates/gitnexus-mcp/src/backend/: local.rs  mod.rs
crates/gitnexus-mcp/src/tools/: definitions.rs  mod.rs
crates/gitnexus-output/: Cargo.toml
crates/gitnexus-output/src/: json.rs  lib.rs  markdown.rs  obsidian.rs  terminal.rs  traits.rs
crates/gitnexus-query/: Cargo.toml
crates/gitnexus-query/src/: ast.rs  executor.rs  grammar.pest  lib.rs  parser.rs
crates/gitnexus-rag/: Cargo.toml
crates/gitnexus-rag/src/: chunker.rs  docx.rs  lib.rs  sfd.rs  validator.rs
crates/gitnexus-search/: Cargo.toml
crates/gitnexus-search/src/: bm25.rs  fusion.rs  hybrid.rs  lib.rs
nexus-brain/src-tauri/: Cargo.toml  tauri.conf.json
nexus-brain/src-tauri/src/: main.rs
(+384 files in other folders)
