[package]
name = "gitnexus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI binary for GitNexus"
default-run = "gitnexus"

[[bin]]
name = "gitnexus"
path = "src/main.rs"

[features]
default = []
kuzu-backend = ["gitnexus-db/kuzu-backend"]

[dependencies]
gitnexus-core.workspace = true
gitnexus-ingest.workspace = true
gitnexus-db.workspace = true
gitnexus-search = { workspace = true, features = ["reranker-llm", "embeddings"] }
gitnexus-mcp.workspace = true
gitnexus-git.workspace = true
gitnexus-output.workspace = true
gitnexus-rag.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
clap.workspace = true
indicatif.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
chrono.workspace = true
axum.workspace = true
tower-http.workspace = true
rustyline.workspace = true
colored.workspace = true
regex.workspace = true
glob.workspace = true
ratatui.workspace = true
crossterm.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
zip.workspace = true
reqwest.workspace = true
serde.workspace = true
uuid.workspace = true
walkdir.workspace = true
# JSON repair fallback for malformed LLM responses (phase 3 enrichment hardening)
jsonrepair = "0.1"
