[package]
name = "gitnexus-db"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Database adapter (KuzuDB), CSV generation, and schema for GitNexus"

[features]
default = []
kuzu-backend = ["kuzu"]

[dependencies]
gitnexus-core.workspace = true
tokio.workspace = true
csv.workspace = true
dashmap.workspace = true
lru.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
bincode = "1"
kuzu = { workspace = true, optional = true }

[dev-dependencies]
