[package]
name = "gitnexus-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "GitNexus desktop application (Tauri v2 + React)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
gitnexus-core.workspace = true
gitnexus-db.workspace = true
gitnexus-ingest.workspace = true
gitnexus-search.workspace = true
gitnexus-git.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
thiserror.workspace = true
reqwest.workspace = true
futures-util.workspace = true
chrono.workspace = true
once_cell.workspace = true
zip.workspace = true
