[package]
name = "gitnexus-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "GitNexus desktop application (Tauri v2 + React)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
gitnexus-core.workspace = true
gitnexus-db.workspace = true
gitnexus-ingest.workspace = true
gitnexus-mcp.workspace = true
gitnexus-rag.workspace = true
gitnexus-search = { workspace = true, features = ["reranker-llm", "embeddings"] }
gitnexus-git.workspace = true
gitnexus-output.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
thiserror.workspace = true
anyhow.workspace = true
reqwest.workspace = true
futures-util.workspace = true
chrono.workspace = true
once_cell.workspace = true
zip.workspace = true
uuid.workspace = true
regex.workspace = true
ignore.workspace = true
