[package]
name = "gitnexus-git"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Git behavioral analysis for GitNexus: hotspots, coupling, and ownership"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
