[package]
name = "gitnexus-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Ingestion pipeline (6 phases) for GitNexus"

[dependencies]
gitnexus-core.workspace = true
gitnexus-lang.workspace = true
rayon.workspace = true
tokio.workspace = true
tree-sitter.workspace = true
walkdir.workspace = true
ignore.workspace = true
lru.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
streaming-iterator.workspace = true
sha2.workspace = true

# Tree-sitter grammars
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-go.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-php.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-kotlin-ng = { workspace = true, optional = true }
tree-sitter-swift = { workspace = true, optional = true }

[features]
default = ["kotlin", "swift"]
kotlin = ["tree-sitter-kotlin-ng"]
swift = ["tree-sitter-swift"]

[dev-dependencies]
