[package]
name = "gitnexus-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MCP server (stdio + HTTP), tools, resources for GitNexus"

[dependencies]
gitnexus-core.workspace = true
gitnexus-db.workspace = true
gitnexus-search.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
