[package]
name = "gitnexus-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MCP server (stdio + HTTP), tools, resources for GitNexus"

[dependencies]
gitnexus-core.workspace = true
gitnexus-db.workspace = true
gitnexus-git = { workspace = true }
gitnexus-search = { workspace = true, features = ["reranker-llm", "embeddings"] }
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
ignore.workspace = true
anyhow.workspace = true

[dev-dependencies]
