[package]
name = "gitnexus-output"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Unified output system for GitNexus: terminal, JSON, and Markdown formatters"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
colored = { workspace = true }
