# Detach from the parent GitNexus workspace — nexus-brain uses edition=2024
# and has independent dependencies, so it compiles as its own standalone crate.
[workspace]

[package]
name = "nexus-brain"
version = "0.1.0"
edition = "2024"
description = "Software Knowledge IDE — The Obsidian-like frontend for GitNexus"
authors = ["Agile Up <contact@agile-up.com>"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"
regex = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
